# ghost-voice-os

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TROUBLESHOOTING.md  GITHUB_PUSH_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  IN_HOUSE_TTS.md  MANUAL_PUSH.md  PRODUCTION_SETUP.md  PUSH_TO_GITHUB.md  README.md  READY_FOR_DEPLOYMENT.txt  STREAMING_IMPLEMENTATION.md  STREAMING_SETUP.md  STREAMING_SUMMARY.md  VOICE_CLONING_QUICKSTART.md  VOICE_CLONING_TECHNICAL.md  VOICE_CLONING_VALIDATION.md  docker-compose.yml  ghost-voice-os.bundle  pyproject.toml  test-streaming-setup.py  verify-streaming.sh
deployment/: docker-compose.yml
deployment/kubernetes/: opensearch.yaml  redis.yaml  voice-api.yaml
deployment/swarm/: stack.yml
examples/: streaming-demo.html  streaming_client.py  voice_cloning_demo.py
scripts/: deploy.sh  dev.sh  migrate.sh  setup-ssl.sh  start.sh  validate-deployment.sh
services/voice-api/: Dockerfile  README.md  main.py  requirements.txt
services/voice-api/core/: call_session.py  conversation_engine.py  event_logger.py  persistence.py  storage.py  streaming_engine.py  tenant_loader.py  transcript_store.py
services/voice-api/providers/: telnyx_client.py  twilio_client.py
services/voice-api/providers/llm/: base.py  llama_cpp.py  mlx.py  openai.py
services/voice-api/providers/streaming/: __init__.py  deepgram_streaming.py  elevenlabs_streaming.py  llm_base.py  local_tts.py  openai_streaming.py  stt_base.py  tts_base.py
services/voice-api/routes/: __init__.py  calls.py  streaming.py  stt.py  telnyx.py  twilio.py  voices.py
services/voice-api/security/: __init__.py  webhook_verification.py
services/voice-api/tenants/: default.json  ghostcrm.json
services/voice-api/tests/: __init__.py  test_streaming.py
services/voice-stt-apple/: Package.swift
services/voice-stt-whisper/: Dockerfile  README.md  main.py  requirements.txt
(+11 files in other folders)
